@@ -1,5 +1,9 @@
 $Id$
 
+2015-05-19  Christian Franke  <franke@computer.org>
+
+	smartctl.8.in, smartd.conf.5.in: Clarify '-H' option and directive.
+
 2015-05-17  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
